--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -9,8 +9,6 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 # Anthropic
 ANTHROPIC_API_KEY=sk-ant-xxx
 
-# Trigger.dev
-TRIGGER_SECRET_KEY=tr_dev_xxx
-
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+# ElevenLabs
+ELEVENLABS_API_KEY=your-elevenlabs-key
+ELEVENLABS_VOICE_ID=JBFqnCBsd6RMkjVDRZzb
