feat: migration and token handling

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -2,12 +2,22 @@
 APP_ENV=development
 FRONTEND_URL=http://localhost:3000
 
+# Database (get connection string from Supabase Dashboard > Settings > Database)
+DATABASE_URL=postgresql+asyncpg://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres
+
 # Supabase
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
 # Anthropic
 ANTHROPIC_API_KEY=sk-ant-xxx
+
+# Google OAuth (for server-side token refresh)
+GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-client-secret
+
+# Token encryption key (generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())")
+TOKEN_ENCRYPTION_KEY=your-32-byte-fernet-key
 
 # ElevenLabs
 ELEVENLABS_API_KEY=your-elevenlabs-key
