--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -7,3 +7,7 @@ anthropic>=0.40.0
 supabase>=2.10.0
 python-multipart>=0.0.18
 elevenlabs>=2.31.0
+cryptography>=44.0.0
+sqlalchemy[asyncio]>=2.0.0
+alembic>=1.14.0
+asyncpg>=0.30.0
