--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,8 +12,9 @@
     "deploy": "wrangler pages deploy ./dist --project-name=gaffer"
   },
   "dependencies": {
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-slider": "^1.2.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-query": "^5.71.5",
     "@tanstack/react-router": "^1.121.27",
@@ -24,7 +25,8 @@
     "motion": "^11.15.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tanstack/router-plugin": "^1.121.27",
