--- a/apps/api/fly.toml
+++ b/apps/api/fly.toml
@@ -1,17 +1,23 @@
-app = "gaffer-api"
-primary_region = "ams"
+# fly.toml app configuration file generated for gaffer-app on 2026-01-28T14:36:31Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'gaffer-app'
+primary_region = 'ams'
 
 [build]
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = "stop"
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
 
 [[vm]]
-  memory = "256mb"
-  cpu_kind = "shared"
+  memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
+  memory_mb = 256
