feat: redis cache integration

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -22,3 +22,8 @@ TOKEN_ENCRYPTION_KEY=your-32-byte-fernet-key
 # ElevenLabs
 ELEVENLABS_API_KEY=your-elevenlabs-key
 ELEVENLABS_VOICE_ID=wo6udizrrtpIxWGp2qJk
+
+# Redis (optional - enables distributed caching and rate limiting)
+# For fly.io: flyctl redis create, then flyctl redis attach <name>
+# Leave empty for local development (uses in-memory fallback)
+REDIS_URL=
